# finsightwebapp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  test_e2e.js  test_e2e.py  test_ttf_symbols.js
backend/: .env.example  Dockerfile.api  docker-compose.yml  main.py  pyproject.toml  run_server.py
backend/api/: main.py
backend/api_client/: client.py
backend/database/: migration_v2.sql  migration_v3.sql  migration_v4.sql  migration_v5.sql  schema.sql
backend/repositories/: base.py  budget_repository.py  category_repository.py  goal_repository.py  transaction_repository.py  user_repository.py
backend/schemas/: analytics.py  auth.py  budgets.py  goals.py  transactions.py
backend/scripts/: capture_screenshots.py  seed_demo.py  test_api.py  test_insights.py  test_suggest.py
backend/services/: __init__.py  analytics_service.py  auth_service.py  budget_service.py  goal_service.py  transaction_service.py
backend/tests/: conftest.py  test_api.py  test_currency.py  test_date_picker.py  test_db_manager.py
backend/utils/: config_manager.py  currency.py  date_picker.py  db_manager.py  insights.py  recurring.py  report_generator.py
docs/: ML_EVALUATION_REPORT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: test_e2e.py  test_filter.py
server/: .env.example  app.js  db.js  package-lock.json  package.json  server.js
server/controllers/: analyticsController.js  authController.js  budgetController.js  currencyController.js  goalController.js  insightController.js  (+1 more)
(+37 files in other folders)
