[project]
name = "finsight"
version = "1.0.0"
description = "Personal finance API — FastAPI backend with MySQL"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "mysql-connector-python>=9.2.0",
    "reportlab>=5.0.0",
    "scikit-learn>=1.9.0",
    "numpy>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "services", "repositories", "schemas", "utils"]
